<resources>
    <string name="app_name">BBHA Test</string>
    <string name="logout">Logout</string>
    <string name="word"><font size="13">Example: \"Find\"\t(Only root of the word)</font></string>
    <string name="hint">Enter a word to search for</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="register_here">Not a member yet? Register here</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="member">Already a member? Login here</string>
    <string name="find">Find</string>
</resources>
